--- a/views/admin/col/index.ejs
+++ b/views/admin/col/index.ejs
@@ -14,7 +14,7 @@
 				<h3 class="panel-title">Col 首页</h3>
 		  </div>
 		  <div class="panel-body">
-				<a href="/admin/cols/add" class="btn btn-danger"></a>
+				<a href="/admin/cols/add" class="btn btn-danger">新增</a>
 				<table class="table table-bordered table-hover">
 					<thead>
 						<tr>
