--- a/views/admin/row/index.ejs
+++ b/views/admin/row/index.ejs
@@ -16,6 +16,7 @@
             <h3 class="panel-title">row 首页</h3>
         </div>
         <div class="panel-body">
+			<a href="/admin/rows/add" class="btn btn-danger">新增</a>
             <table class="table table-bordered table-hover">
                 <thead>
                     <tr>
