--- a/views/admin/goods/add.ejs
+++ b/views/admin/goods/add.ejs
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>商品新增</title>
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/admin/css/style.css">
     <script src="/assets/kindeditor/kindeditor-all.js"></script>
 </head>
 <body>
@@ -30,8 +31,9 @@
 					  </div>
 					  <div class="form-group upload">
 						  <label for="">图片</label>
-						  <input type="text" class="form-control" name="picture" id="url1" placeholder="请上传图片" readonly="readonly">
-						  <input type="button" value="选择图片" id="image1">
+						  <img src="/default.jpg" id="imgCtrl" alt="图片" style="width:100px;max-height:100px;">
+						  <input name="img" id="img" type="hidden" class="form-control" placeholder="请上传图片">
+						  <a href="javascript:void(0)" value="上传" id="uploadButton">上传</a>
 					  </div>
 					  <div>
 					  <div class="form-group">
@@ -52,6 +54,7 @@
 			</div>
 	  	</div>
 	</div>
+	<script src="/admin/js/jquery.min.js"></script>
 	<script>
         KindEditor.ready(function(K) {
             var editor1 = K.create('textarea[name="content"]', {
