--- a/views/admin/row/add.ejs
+++ b/views/admin/row/add.ejs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>行数据新增</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="/assets/kindeditor/kindeditor-all.js"></script>
 </head>
 
 <body>
@@ -31,7 +32,13 @@
 
         </div>
     </div>
-
+	<script>
+		KindEditor.ready(function(K) {
+			var editor1 = K.create('textarea[name="description"]', {
+				uploadJson: '/common/kindeditor/uploadImg' //处理文件上传服务
+			});
+		});
+	</script>
 </body>
 
 </html>
